# spotify-review-discovery-agent

./: .env.example  .gitignore  Makefile  README.md  render.yaml  vercel.json
backend/: pyproject.toml
backend/app/: deps.py  main.py  seed_fixtures.py
backend/app/routers/: __init__.py  health.py  meta.py  overview.py  questions.py  quotes.py  segments.py  themes.py  unmet_needs.py
backend/app/schemas/: __init__.py  common.py  meta.py  overview.py  questions.py  quotes.py  segments.py  themes.py  unmet_needs.py
backend/app/services/: __init__.py  meta.py  (+6 more)
backend/core/: __init__.py  bot_filter.py  config.py  db_copy.py  db_url.py  discovery_filter.py  embeddings.py  llm.py  questions.py  rate_limit.py  vectorstore.py
backend/db/: __init__.py  models.py  session.py
backend/ingestion/: __init__.py  cli.py  dates.py  export.py  filters.py  fixture_loader.py  normalize.py  pii.py  service.py  types.py  window.py
backend/pipeline/: __init__.py  classifier.py  cli.py  clusterer.py  embedder.py  embedding_utils.py  evidence_builder.py  orchestrator.py  qa_synthesizer.py  retrieval.py  schemas.py  segment_builder.py  theme_labeler.py  theme_membership.py  unmet_needs_extractor.py
backend/scripts/: copy_database.py  print_theme_examples.py  retheme_discovery.py  sync_theme_membership.py
backend/tests/: conftest.py  test_api.py  test_bot_filter.py  test_classifier.py  test_clusterer.py  test_config.py  test_copy_database.py  test_db_url.py  test_discovery_filter.py  test_embedder.py  test_embedding_utils.py  test_embeddings.py  test_health.py  test_ingestion.py  test_ingestion_filters.py  test_intelligence.py  test_llm.py  test_migrations.py  test_pipeline.py  test_theme_labeler.py  test_theme_membership.py  test_vectorstore.py
(+62 files in other folders)
